Addition styles with Contact us page.

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -45,7 +45,7 @@
                                     <li><a href="#services">Donation</a></li>
                                     <li><a href="#work">Our Work</a></li>
                                     <li><a href="#team">Gallary</a></li>
-                                    <li><a href="#contact">Contact</a></li>
+                                    <li><a href="Contactus.html">Contact</a></li>
                                     <li><a href="Aboutus.html">About Us</a></li>
                                 </ul>
                             </nav>
