New pagas Gallery designed, with Css, And some changes in style.css

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -42,9 +42,9 @@
                                 <label for="nav-button" onclick></label>
                                 <ul class="nav-container">
                                     <li><a href="index.html" class="current">Home</a></li>
-                                    <li><a href="#services">Donation</a></li>
-                                    <li><a href="#work">Our Work</a></li>
-                                    <li><a href="#team">Gallary</a></li>
+                                    <li><a href="#">Donation</a></li>
+                                    <li><a href="#">Our Work</a></li>
+                                    <li><a href="Gallery.html">Gallary</a></li>
                                     <li><a href="Contactus.html">Contact</a></li>
                                     <li><a href="Aboutus.html">About Us</a></li>
                                 </ul>
@@ -59,7 +59,7 @@
 
                  <main id="main">
                     <div id="section01" class="vh-element" data-props="padding-top,padding-bottom" data-values="45,45">
-                        <div id="bg-section01" class="luxy-el bg-section" data-speed-y="40"></div>
+                        <div id="aboutimg" class="luxy-el bg-section" data-speed-y="40"></div>
                         <div class="content-inner">
                             <div class="d-flex justify-content-center oleo">
                                 
@@ -74,7 +74,7 @@
             <div class="container, about">
                 <div class="row">
                     <div class="col-md-2"></div>
-                    <div class="col-md-4" id="aboutimg" style=" background-image: url(images/Goal3.png);"></div>
+                    <div class="col-md-4" id="aboutimg"></div>
                     <div class="col-md-4" id="abouttxt">
                         <div class="row">
                             <h2> Lorem Ipsum</h2>
