--- a/Contactus.html
+++ b/Contactus.html
@@ -37,9 +37,9 @@
                                 <label for="nav-button" onclick></label>
                                 <ul class="nav-container">
                                     <li><a href="index.html" class="current">Home</a></li>
-                                    <li><a href="#services">Donation</a></li>
-                                    <li><a href="#work">Our Work</a></li>
-                                    <li><a href="#team">Gallary</a></li>
+                                    <li><a href="#">Donation</a></li>
+                                    <li><a href="#">Our Work</a></li>
+                                    <li><a href="Gallery.html">Gallary</a></li>
                                     <li><a href="Contactus.html">Contact</a></li>
                                     <li><a href="Aboutus.html">About Us</a></li>
                                 </ul>
