Additional AOS Animition on other pages

--- a/Contactus.html
+++ b/Contactus.html
@@ -57,7 +57,7 @@
                             <span>
                               CONTACT US NOW
                             </span>
-                            &mdash; ZVAC NGO ORGANITZATION &mdash;
+                            &mdash; ZVAC NON-PROFIT ORGANITZATION &mdash;
                           </p>
                     </div>
 
