--- a/Gallery.html
+++ b/Gallery.html
@@ -20,6 +20,9 @@
         <!--  Links-->
         <link rel="stylesheet" href="Gallery.css">
         <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+        <!-- AOS lib-->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     </head>
 
 
@@ -55,16 +58,16 @@
             
     <main class="w-100 cf helvetica dark-gray bg-white pa3 pa4-m pa5-l mw9 center">
         <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-          <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/Images\ of\ Child\ Labor_\ Photography\ for\ Social\ Change.jpg)"></div>
+          <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="500" style="background:black url(images/Images\ of\ Child\ Labor_\ Photography\ for\ Social\ Change.jpg)"></div>
         </div>
         <div class="fl w-50 w-25-l pl2 pr2-m ph2-l mb3 mb4-l">
-          <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/NGO\ Photography\ in\ Jaipur\,\ India\ -\ Alicia\ Fox\ Photography\,\ Crescent\ Head\ NSW\ Photographer.jpg)"> </div>
+          <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="700" style="background:black url(images/NGO\ Photography\ in\ Jaipur\,\ India\ -\ Alicia\ Fox\ Photography\,\ Crescent\ Head\ NSW\ Photographer.jpg)"> </div>
         </div>
         <div class="fl w-50 w-50 w-25-l pr2 pr0-l pl3-l mb3 mb4-l">
-            <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/NON-GOVERNMENTAL\ ORGANIZATION-\ SAVIOURS\ -\ Saviour\ Foundation.jpg)"> </div>
+            <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="1000" style="background:black url(images/NON-GOVERNMENTAL\ ORGANIZATION-\ SAVIOURS\ -\ Saviour\ Foundation.jpg)"> </div>
           </div>
         <div class="fl w-50 w-50 w-25-l pl2 pl0-l pr2-m pr4-l mb3 mb4-l">
-          <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/Goal.jpg)"> </div>
+          <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="1500" style="background:black url(images/Goal.jpg)"> </div>
         </div>
         <div class="fl w-100 w-50-l pr2-l pl2-ns mb4 mb0-l mb4 outline">
           <div class="pa4">
@@ -79,7 +82,7 @@
         </div>
         <div class="cf">
           <div class="fl w-100 w-25-l pl3-l mb3 mb4-l">
-              <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/NGO\ Photography\ in\ Jaipur\,\ India\ -\ Alicia\ Fox\ Photography\,\ Crescent\ Head\ NSW\ Photographer.jpg)"></div>
+              <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="700" style="background:black url(images/NGO\ Photography\ in\ Jaipur\,\ India\ -\ Alicia\ Fox\ Photography\,\ Crescent\ Head\ NSW\ Photographer.jpg)"></div>
           </div>
           <div class="fl w-100 w-25-l pr3-l">
             <p class="lh-copy measure f6 pt3 pt0-l mt0 mb3 mb4-l center">
@@ -93,16 +96,16 @@
 
           <div class="fl w-100 w-75-l pv0 mv0">
             <div class="fl w-100 mb2 mb4-l">
-              <div class="cover pv5 pv6-l" style="background:black url(images/Alan\ Watts\ -\ What\ do\ you\ Desire_\ Traveling\ SE\ Asia\ 2015.jpg)"> </div>
+              <div class="cover pv5 pv6-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="600" style="background:black url(images/Alan\ Watts\ -\ What\ do\ you\ Desire_\ Traveling\ SE\ Asia\ 2015.jpg)"> </div>
             </div>
             <div class="fl w-25 mb2 mb4-l">
-              <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/purpose.jpg)"> </div>
+              <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="800" style="background:black url(images/purpose.jpg)"> </div>
             </div>
             <div class="fl w-75 pl2 pl4-l mb2 mb4-l">
-              <div class="cover pv5 pv6-m pv7-l" style="background:black url(images/Xhosa\ kids\ posing\ for\ a\ photo.jpg)"> </div>
+              <div class="cover pv5 pv6-m pv7-l" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="1100" style="background:black url(images/Xhosa\ kids\ posing\ for\ a\ photo.jpg)"> </div>
             </div>
             <div class="fl w-100 mb2 mb4-l">
-                <div class="cover pv5 pv6-ns" style="background:black url(images/NON-GOVERNMENTAL\ ORGANIZATION-\ SAVIOURS\ -\ Saviour\ Foundation.jpg)"> </div>
+                <div class="cover pv5 pv6-ns" data-aos="zoom-fade-in" data-aos-duration="3000" data-aos-delay="1300" style="background:black url(images/NON-GOVERNMENTAL\ ORGANIZATION-\ SAVIOURS\ -\ Saviour\ Foundation.jpg)"> </div>
             </div>
           </div>
         </div>
@@ -242,6 +245,11 @@
                         targets : '.luxy-el',
                         wrapperSpeed:  0.08
                     });
+                </script>
+                <!-- AOS Js-->
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script>
+                    AOS.init();
                 </script>
 
     </body>
