--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, harum fugit quod quisquam blanditiis explicabo voluptatibus nisi cum magnam repudiandae eius tempora ex cumque deserunt et, aliquam dolores at eveniet.
                             </p>
                         </div>
+                        <div class="col-md-1"></div>
                         <div class="col-md-3" id="vision2" data-aos="fade-left" data-aos-duration="3000" style=" background-image: url('images/Goal2.jpg');
                         "></div>
-                        <div class="col-md-2"></div>
+                        <div class="col-md-1"></div>
                     </div>
                 </div>
                     
@@ -270,6 +271,7 @@
                         wrapperSpeed:  0.08
                     });
                 </script>
+                <!-- AOS Js -->
                 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
                 <script>
                     AOS.init();
