The Design is complited up to here now, but withing fr the customer req.

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -74,7 +74,7 @@
             <div class="container, about">
                 <div class="row">
                     <div class="col-md-2"></div>
-                    <div class="col-md-4" id="aboutimg"></div>
+                    <div class="col-md-4" id="IMG"></div>
                     <div class="col-md-4" id="abouttxt">
                         <div class="row">
                             <h2> Lorem Ipsum</h2>
